...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/power_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/power_button"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/power_top_guideline" />

        <Button
            android:id="@+id/manual_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_bottom_guideline"
            android:text="@string/manual"/>
...
